--- a/Shopping_Buy_All/Shopping_Buy_All/Estadisticas/Ventanas_Estadisticas/EstadisticasTarjetas/UsoPorTipo/ComprasPorTipo.rdlc
+++ b/Shopping_Buy_All/Shopping_Buy_All/Estadisticas/Ventanas_Estadisticas/EstadisticasTarjetas/UsoPorTipo/ComprasPorTipo.rdlc
@@ -379,6 +379,10 @@
                     </ChartAxisScaleBreak>
                   </ChartAxis>
                 </ChartValueAxes>
+                <ChartThreeDProperties>
+                  <Enabled>true</Enabled>
+                  <Clustered>true</Clustered>
+                </ChartThreeDProperties>
                 <Style>
                   <BackgroundColor>#00ffffff</BackgroundColor>
                   <BackgroundGradientType>None</BackgroundGradientType>
@@ -495,7 +499,7 @@
             </Style>
           </Textbox>
         </ReportItems>
-        <Height>18cm</Height>
+        <Height>16.03878cm</Height>
         <Style />
       </Body>
       <Width>17.145cm</Width>
